# verivyx-monorepo

./: .env.example  .gitignore  README.md  docker-compose.yml
docs/superpowers/spikes/scratch/oz_account/: Cargo.toml
docs/superpowers/spikes/scratch/oz_account/src/: contract.rs
services/soroban-contracts/: Cargo.toml  README.md
services/soroban-contracts/paywall_core/: Cargo.toml  Makefile
services/soroban-contracts/paywall_core/src/: lib.rs  test.rs
services/soroban-contracts/paywall_core/test_snapshots/test/: test_distribute_amount_below_fee_rejected.1.json  test_distribute_disabled_domain.1.json  test_distribute_domain_not_registered.1.json  test_distribute_splits_from_contract_balance.1.json  test_distribute_wrong_token_rejected.1.json  test_pay_disabled_domain.1.json  test_pay_domain_not_registered.1.json  test_pay_extends_creator_ttl.1.json  test_pay_splits_correctly.1.json  test_pay_wrong_token_rejected.1.json  test_register_by_keeper_cannot_change_creator.1.json  test_register_by_keeper_stores_data.1.json  test_register_fee_equals_price_rejected.1.json  test_register_overwrite.1.json  test_register_stores_data.1.json  test_set_enabled_domain_not_registered.1.json  test_set_enabled_toggle.1.json  test_set_enabled_unauthorized.1.json
services/soroban-contracts/service_registry/: Cargo.toml
services/soroban-contracts/service_registry/src/: lib.rs
services/soroban-contracts/service_registry/test_snapshots/test/: test_get_missing_returns_none.1.json  test_register_and_get.1.json  test_register_invalid_price.1.json  test_set_enabled_toggle.1.json  test_set_enabled_unauthorized.1.json
services/soroban-contracts/smart_account/: Cargo.toml
services/soroban-contracts/smart_account/src/: lib.rs
services/soroban-contracts/smart_account/test_snapshots/test/: test_execute_payment_deducts_limit_and_transfers.1.json  test_execute_payment_exceeds_limit.1.json  test_get_limit_unknown_returns_zero.1.json  test_init_double_fails.1.json  test_set_and_get_limit.1.json
services/soroban-contracts/verivyx_pay_adapter/: Cargo.toml  Makefile
services/soroban-contracts/verivyx_pay_adapter/src/: lib.rs  test.rs
services/soroban-contracts/verivyx_pay_adapter/test_snapshots/test/: expired_delegation_fails.1.json  non_session_signer_cannot_pay.1.json  revoke_remove_context_rule_disables_session.1.json  revoke_remove_signer_disables_session.1.json  session_signer_authorized_for_adapter.1.json  test_destination_lock_correct_target_succeeds.1.json  test_destination_lock_wrong_target_rejected.1.json  test_do_check_auth_with_policy_succeeds.1.json  test_expired_rule_rejected.1.json  test_spending_limit_enforce_panics_single_overlimit.1.json  test_spending_limit_enforce_then_can_enforce_blocked.1.json  test_spending_limit_exceeds_budget.1.json  test_spending_limit_within_budget.1.json  wrong_destination_blocked.1.json
services/soroban-contracts/verivyx_pay_adapter/test_snapshots/test/adapter_tests/: disabled_domain_panics.1.json  fee_cannot_be_skipped.1.json  fee_cannot_be_skipped_over_budget.1.json  over_budget_fails.1.json  pay_pulls_resource_and_fee_from_owner.1.json  pays_within_budget.1.json  (+4 more)
(+323 files in other folders)
