[workspace]
members = [
    "service_registry",
    "paywall_core"
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "23.5.3" }
stellar-accounts = { version = "0.5.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
