[package]
name = "paywall-core"
version = "1.0.0"
edition = "2021"
authors = ["Paywall AI Team"]
description = "Core on-chain registry and payment logic for Paywall AI"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"
lto = true
codegen-units = 1
