[package]
name = "verivyx-pay-adapter"
version = "0.1.0"
edition = "2021"
description = "Spike: verify OpenZeppelin Stellar smart-account delegation API (NOT production code)"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
stellar-accounts = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-accounts = { workspace = true }
