[package]
name = "verivyx-pay-adapter"
version = "0.1.0"
edition = "2021"
description = "Verivyx Pay Adapter — destination-locked settlement entry for non-custodial MCP payments"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
stellar-accounts = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-accounts = { workspace = true }
paywall-core = { path = "../paywall_core", features = ["testutils"] }
