[package]
name = "oz-smart-account"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "23.5.3" }
stellar-accounts = { version = "0.5.0" }

[dev-dependencies]
soroban-sdk = { version = "23.5.3", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
panic = "abort"
codegen-units = 1
lto = true
